--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,19 @@
 [tool.poetry]
 name = "drf-webhooks"
-version = "0.1.2"
+version = "0.1.3"
 license = "MIT"
 readme = "README.md"
 description = "Setup webhooks using existing DRF Serializers"
 authors = ["Arnar Yngvason <arnar@reon.is>"]
 repository = "https://github.com/demux/drf-webhooks"
 keywords = ["django", "drf", "rest", "djangorestapi", "webhooks"]
-packages = [{include = "webhooks"}]
+packages = [{include = "drf_webhooks"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1"
 djangorestframework = "^3.14"
 inflection = "^0.5"
-swapper = "^1.3"
 httpx = "^0.23"
 pendulum = "^2.1"
 pytimeparse = "^1.1"
