--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ djangorestframework-xml = "^2.0"
 xmltodict = "^0.13"
 celery = "^5.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.12"
 isort = "^5.11"
 pytest = "^7.2"
@@ -32,6 +32,9 @@ django-environ = "^0.9"
 dj-database-url = "^1.2"
 psycopg2 = "^2.9"
 djangorestframework-camel-case = "^1.4"
+celery-stubs = "^0.1.3"
+djangorestframework-stubs = "^1.9.1"
+django-stubs = "^1.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -55,6 +58,10 @@ include_trailing_comma = true
 known_first_party = "webhooks,example"
 line_length = 79
 multi_line_output = 3
+
+[tool.pyright]
+pythonVersion = "3.10"
+reportMissingTypeStubs = true
 
 [tool.black]
 target_version = ["py310"]
