--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytimeparse = "^1.1"
 djangorestframework-xml = "^2.0"
 xmltodict = "^0.13"
 celery = "^5.2"
+myst-parser = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12"
